--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -68,6 +68,7 @@ are both much larger than {\col} and prohibit the use of these structures for al
 small data sets.
 
 \subsection{Compressed Suffix Structures}
+\label{sec-css}
 
 Reducing the space usage of suffix based index structure has recently become an 
 active area of research. The space usage of a suffix array can be reduced 
