--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -10,7 +10,7 @@ To be useful, LMs not only need to be accurate but they also need to be fast and
 %
 %where the probability of a sequence of words is decomposed based on the chain rule ad approximatedusing the Markov assumption XX. 
 %A typical count-based LM can contain as many as several hundred billions of $n$grams
-In this paper, we build  fast and compact count-based language models on web-scale corpora using modern succinct data structures.
+In this paper, we build  fast and compact $n$gram LMs, the predominant approach in count-based language modeling, on web-scale corpora using modern succinct data structures.
 %
 We show how to compactly index the text statistics needed by $n$gram language models, so that they can be queried efficiently to make the probabilities on the fly.       
 %
@@ -26,20 +26,37 @@ As always, there is a trade-off between accuracy, space, and time, with recent p
 or \emph{loss-less}  not-small LMs [SRI], where compression [Germann 2009], Suffix arrays [KenLM], suffix tries [KenLM], and suffix trees [LREC]  have been used to further reduce the storage.
 % 
 However, none of the aforementioned works scale up to high-order  $n$gram LMs for web scale corpora. 
-%
-We make use of recent advances in \emph{compact suffix arrays} (CSAs) [REF] and 
+
+We make use of recent advances in \emph{compact suffix arrays} (CSAs) [REF] and
 \emph{compact suffix trees} (CSTs) [REF] to build small-storage indices  with reasonable query time for high-order $n$gram LMs on web scale corpora.
-
-
+%
+In $n$gram LMs, the probability of a sequence of words is decomposed based on the chain rule 
+and approximated using the Markov assumption 
+$P(w_1,\ldots,w_{\ell}) \approx \prod_{i=1}^{\ell} P(w_i|w_{i-n+1}^{i-1})$. 
+%
+%The Markov assumption reduces the number of model parameters 
+%(which translates to more robust parameter estimation and smaller storage) 
+%at the cost of probabililty approximation due to strong independence assumptions. 
+%
+Our approach weakens the strong independence assumptions inherent in $n$gram LMs 
+by making the space requirements  and query time of high-order LMs reasonable. 
+%
+It is well known that, due to power-law nature of natural language, maximum likelihood 
+parameters estimator significantly overfits the training corpora. 
+%
+Therefore, our indices store raw frequency counts needed to compute 
+\emph{smoothed} $n$gram probabilities based on Kneser-Kney (KN) smoothing, 
+a powerful smoothing technique with elegant statistical properties\footnote{Although 
+we focus on KN-smoothing in this paper, our approach can be used for indexing counts needed 
+in other smoothing techniques as well [chen and goodman].} [kneser kney].  
+% 
 
 %The predominant approach to count-based language modelling is the $n$gram model, where a typical LM can contain as many as several hundred billions of $n$grams XX.
 
-  
 %A typical LM can contain as many as severl hundred billions of $n$gramsFor modern NLP systems 
 %The predominanr approach in language modelling is the $n$gram model, where the probability of a sequence of words is decomposed based on the chain rule and
 %approximated using the Markov assumption XX. 
 %
- 
 
 %The dominant approach to language modelling is $n$gram  model, where 
 
