--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -43,7 +43,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  Here goes the abstract.
+  \input{sec-abstract.tex}
 \end{abstract}
 
 \section{Introduction}
