--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -25,12 +25,12 @@ Portuguese&PT&187.20&49.03&1737\\
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{figures/Perplexity-n.pdf}
-\caption{All 9 languages pplx results with m=2..10,15,20,infinity.}
+\caption{All 8 languages pplx results with m=2..10,15,20,infinity(=99999).}
 \end{figure}
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{figures/Time-Space.pdf}
-\caption{On German, showing the size in MB (y axis) and time (x axis) for 4 methods: CST single, CST dual, SRILM, SRILM compact. Each method is a 'line' connecting m=2,3,4,... Only CST single will go beyond m=6.}
+\caption{On German, showing the size in MB (y axis) and time (x axis) for 4 methods: CST single, CST dual, SRILM, SRILM compact.}
 \end{figure}
 
 \missingfigure[figwidth=\columnwidth]{Wikipedia pplx (right axis), and time (left axis) for the single CST on characters vs words as a function of \ngram size.}
