new relative perplexity figure

--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -24,7 +24,7 @@ Portuguese&PT&187.20&49.03&1737\\
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{figures/Perplexity-n.pdf}
+\input{figures/fig-europarl-pplx-ngram}
 \caption{All 8 languages pplx results with m=2..10,15,20,infinity(=99999).}
 \end{figure}
 
