--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -1,27 +1,7 @@
 \documentclass[11pt,a4paper]{article}
-
 \usepackage{acl2015}
-\usepackage{times}
-\usepackage{url}
-\usepackage{latexsym}
-\usepackage{amsmath}
-\usepackage{ifthen}
-\usepackage{xspace}
-\usepackage{booktabs}
-\usepackage{algorithm}
-\usepackage{algorithmicx}
-\usepackage{scalerel}
-\usepackage{array}
-\usepackage[noend]{algpseudocode}
 \usepackage[usenames,dvipsnames]{color}
-\usepackage{tikz}
-\usepackage[all]{nowidow}
-\usetikzlibrary{trees,matrix}
-\usepackage{afterpage}
-\usepackage{multirow,color}
-\usepackage{subcaption}
-\usepackage{todonotes}
-
+\input{packages.tex}
 \input{macros.tex}
 
 \title{Compact, Efficient and Unlimited Capacity:
