--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -32,11 +32,13 @@ We evaluated the perplexity across different languages and using different order
 \caption{All 8 languages pplx results with m=2..10,15,20,infinity(=99999).}
 \end{figure}\label{figure:pplx}
 We speculate that the drop in higher order perplexity gain is due using to Kneser-Ney discounting which is not designed for higher order $m$-gram language models and starts to heavily discount after $5-gram$. We leave further exploration of richer techniques such as Modified Kneser-Ney, or Sequence Memoizer to our future work. 
+\subsection{Time-Memory}
+Figure~\ref{figure:time-space} compares our timing and memory usage with SRILM on German part of the Europarl dataset. 
+
 \begin{figure}
 \includegraphics[width=\columnwidth]{figures/Time-Space.pdf}
 \caption{On German, showing the size in MB (y axis) and time (x axis) for 4 methods: CST single, CST dual, SRILM, SRILM compact.}
-\end{figure}
-
+\end{figure}\label{figure:time-space}
 %\missingfigure[figwidth=\columnwidth]{Wikipedia pplx (right axis), and time (left axis) for the single CST on characters vs words as a function of \ngram size.}
 
 %\missingfigure[figwidth=\columnwidth]{Wikipedia histogram over \ngram size, perhaps as a figure or table?}
