Wording in exp section.

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -5,6 +5,9 @@
 
 \newcommand{\supp}{\emph{Supplementary Materials}\xspace}
 
+\newcommand*\SRILM{\textsc{SriLm}\xspace}
+\newcommand*\KenLM{\textsc{KenLm}\xspace}
+
 \newcommand*\Let[2]{\State #1 $\gets$ #2}
 \newcommand*\CSA{\textsc{Csa}\xspace}
 \newcommand*\CST{\textsc{Cst}\xspace}
