--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -29,7 +29,7 @@ Portuguese&PT&187.20&49.03&1737\\
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{figures/Time-Space.pdf}
+\input{figures/fig-eu-de-space-time}
 \caption{On German, showing the size in MB (y axis) and time (x axis) for 4 methods: CST single, CST dual, SRILM, SRILM compact.}
 \end{figure}
 
